--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,3 +26,10 @@
     display: block;
   }
 }
+
+@media only screen and (min-width: 768px) {
+  .home-sidebar {
+    position: sticky;
+    top: 110px;
+  }
+}
